<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/tvCol_Destination"
        android:layout_width="6dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:text="@string/destination"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCol_Airline"
        android:layout_width="4dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/airline"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvCol_Date"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:text="@string/date"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>